import { Spec } from '/tbc/core/proto/common.js';

// This file is for anything related to launching a new sim. DO NOT touch this
// file until your sim is ready to launch!

// This list controls which links are shown in the top-left dropdown menu.
export const launchedSpecs: Array<Spec> = [
	Spec.SpecBalanceDruid,
	Spec.SpecHunter,
	Spec.SpecMage,
	Spec.SpecRogue,
	Spec.SpecElementalShaman,
	Spec.SpecEnhancementShaman,
	Spec.SpecShadowPriest,
];
